Scale to mobile, suitable for iPhone 6: 375 x 667

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/components/1-header.css">
     <link rel="stylesheet" href="./css/components/2-current-information.css">
     <link rel="stylesheet" href="./css/components/3-introduction.css">
+    <link rel="stylesheet" href="./css/components/4-associates.css">
     <link rel="stylesheet" href="./css/components/5-humans.css">
     <link rel="stylesheet" href="./css/components/6-services.css">
     <link rel="stylesheet" href="./css/components/9-footer.css">
