handle showing product detail popup on mobile iPhone 6: 375 x 667

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/components/4-associates.css">
     <link rel="stylesheet" href="./css/components/5-humans.css">
     <link rel="stylesheet" href="./css/components/6-services.css">
+    <link rel="stylesheet" href="./css/components/7-products.css">
+    <link rel="stylesheet" href="./css/components/8-connect.css">
     <link rel="stylesheet" href="./css/components/9-footer.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- Bootstrap CSS -->
@@ -173,19 +175,19 @@
         <div class="headings">Liên kết với chúng tôi</div>
         <div class="list-news custom_container" style="margin-top: 20px;">
             <div class="fb-page" data-href="https://www.facebook.com/TheCameraStudio.Official/" data-tabs="timeline"
-                 data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false"
+                 data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
                  data-show-facepile="true">
                 <blockquote cite="https://www.facebook.com/TheCameraStudio.Official/" class="fb-xfbml-parse-ignore"><a
                         href="https://www.facebook.com/TheCameraStudio.Official/">Saigon Shoot</a></blockquote>
             </div>
             <div class="fb-page" data-href="https://www.facebook.com/SaigonShoot/" data-tabs="timeline"
-                 data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false"
+                 data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
                  data-show-facepile="true">
                 <blockquote cite="https://www.facebook.com/SaigonShoot/" class="fb-xfbml-parse-ignore"><a
                         href="https://www.facebook.com/SaigonShoot/">Saigon Shoot</a></blockquote>
             </div>
             <div class="fb-page" data-href="https://www.facebook.com/TheCameraHouses/" data-tabs="timeline"
-                 data-height="" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false"
+                 data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
                  data-show-facepile="true">
                 <blockquote cite="https://www.facebook.com/TheCameraHouses/" class="fb-xfbml-parse-ignore"><a
                         href="https://www.facebook.com/TheCameraHouses/">Saigon Shoot</a></blockquote>
@@ -229,7 +231,7 @@
 </div>
 
 <div class="product-detail-popup">
-    <iframe id="product-video" width="100%" height="500px" src="" frameborder="0"
+    <iframe id="product-video" width="100%" src="" frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
     <a id="product-link" href="" target="_blank">Xem Toàn Bộ Sản Phẩm</a>
