change mobile size to 441px handle showing fanpages in mobile site

--- a/index.html
+++ b/index.html
@@ -174,24 +174,7 @@
         <div class="link4 move-link" style="transform: translateY(-160%);"></div>
         <div class="headings">Liên kết với chúng tôi</div>
         <div class="list-news custom_container" style="margin-top: 20px;">
-            <div class="fb-page" data-href="https://www.facebook.com/TheCameraStudio.Official/" data-tabs="timeline"
-                 data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
-                 data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/TheCameraStudio.Official/" class="fb-xfbml-parse-ignore"><a
-                        href="https://www.facebook.com/TheCameraStudio.Official/">Saigon Shoot</a></blockquote>
-            </div>
-            <div class="fb-page" data-href="https://www.facebook.com/SaigonShoot/" data-tabs="timeline"
-                 data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
-                 data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/SaigonShoot/" class="fb-xfbml-parse-ignore"><a
-                        href="https://www.facebook.com/SaigonShoot/">Saigon Shoot</a></blockquote>
-            </div>
-            <div class="fb-page" data-href="https://www.facebook.com/TheCameraHouses/" data-tabs="timeline"
-                 data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
-                 data-show-facepile="true">
-                <blockquote cite="https://www.facebook.com/TheCameraHouses/" class="fb-xfbml-parse-ignore"><a
-                        href="https://www.facebook.com/TheCameraHouses/">Saigon Shoot</a></blockquote>
-            </div>
+            <!-- List of fanpages will be shown here-->
         </div>
 
     </section>
@@ -265,6 +248,7 @@
 <script src="js/config.js"></script>
 <script src="js/Associate.js"></script>
 <script src="js/MainController.js"></script>
+<script src="js/Fanpage.js"></script>
 <script src="js/main.js"></script>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous"
