--- a/index.html
+++ b/index.html
@@ -97,19 +97,52 @@
                     <div class="general-introduction ">
                         <p class="headings-black">GIỚI THIỆU</p>
                         <div class="intro-text">
-                            <p>Được thành lập năm 2016, Saigon Shoot liên tục phát triển để cung cấp
-                                cho khách hàng những sản phẩm truyền
-                                thông chất lượng cao. Với dịch vụ trọn gói từ lên ý tưởng đến hoàn thiện
-                                kịch bản, phác họa storyboard, lên kế hoạch
-                                kinh phí, thực hiện dự án và hậu kỳ. Bao gồm cả phát hành. <br> <br>
-                                CON NGƯỜI chính là chìa khóa mang đến thành công cho Saigon Shoot. Sự
-                                lao động nghiêm túc của đội ngũ chuyên
-                                nghiệp, nghệ sĩ tính riêng biệt, cần cù và cầu tiến; luôn mong
-                                muốn
-                                mang đến những sản phẩm tốt nhất cho
-                                khách hàng. Với tinh thần TRÁCH NHIỆM và UY TÍN luôn đặt hàng
-                                đầu, Saigon Shoot sẽ hiện thực hóa những
-                                yêu cầu và mong đợi của bạn.
+                            <p>Là đơn vị có nhiều năm kinh nghiệm trong lĩnh vực làm video quảng cáo, các show truyền hình, quảng bá sản phẩm trên các nền tảng mạng xã hội. Saigon Shoot đem lại cho bạn những gói dịch vụ phức hợp và riêng lẻ tuỳ theo từng nhu cầu.
+                            </p>
+                            <ul style="list-style-type:none;">
+                                Thế mạnh của Feeling Media
+                                <li>⁃	Cơ sở vật chất đầy đủ (trang thiết bị, studio, phòng hậu kỳ)</li>
+                                <li>⁃	Đội ngũ nhân sự chủ chốt dày dặn kinh nghiệp thực tế (Account, Đạo diễn, Biên tập, Dựng phim)</li>
+                                <li>⁃	Đội ngũ nhân sự trẻ sáng tạo, nhiết huyết, bắt trend</li>
+                                <li>⁃	Có thể kết nối một lượng Kols lớn trên toàn quốc.</li>
+                            </ul>
+                            <p>Saigon Shoot cung cấp gì?</p>
+                            <ol>
+                                <li> <strong>Giải pháp quảng cáo bằng video</strong> 
+                                    <ul style="list-style-type: none;">
+                                        <li>⁃	Sản xuất TVC, Phim Giới Thiệu Doanh Nghiệp</li>
+                                        <li>⁃	Thực hiện Live Stream trên nhiều nền tảng (web, facebook, youtube,...)</li>
+                                        <li>⁃	Thực hiện các video mang tính viral cao (tiktok, tiểu phẩm ngắn,...)</li>
+                                        <li>⁃	Xây dựng và thực hiện nội dung kênh youtube đa dạng thể loại (Craft & DIY, Ẩm Thực, Beauty, Food, giới thiệu sản phẩm...)</li>
+                                        <li>⁃	Thực hiện Video Motion Graphic, 2D, 3D, kỹ xảo Vfx.</li>
+                                    </ul>
+                                </li>
+                                <br>
+                                <li> <strong>Giải pháp quảng cáo bằng hình ảnh</strong> 
+                                    <ul style="list-style-type: none;">
+                                        <li>⁃	Chụp ảnh sản phẩm theo concept, chụp trên nền đơn sắc</li>
+                                        <li>⁃	Chụp ảnh Food, Menu nhà hàng/Quán ăn</li>
+                                        <li>⁃	Chụp ảnh mỹ phẩm, quần áo</li>
+                                        <li>⁃	Chụp ảnh người mẫu, lookbook</li>
+                                        <li>⁃	Chụp ảnh sự kiện</li>
+                                    </ul>
+                                </li>
+                                <br>
+                                <li> <strong>Giải pháp quảng cáo bằng con người kết hợp với social media</strong> 
+                                    <ul style="list-style-type: none;">
+                                        <li>⁃	Mời những Kols (Nghệ sĩ, Streamer, Youtuber,...) tham gia giới thiệu sản phẩm, dịch vụ cho doanh nghiệp trên các nền tảng mạng xã hội.
+                                        </li>
+                                        <li>⁃	Đề xuất và kết nối Người nổi tiếng làm đại sứ thương hiệu cho nhãn hàng.</li>
+                                        <li>⁃	Tổ chức event, sự kiện, nhạc hội nhằm quảng bá doanh nghiệp.</li>
+                                    </ul>
+                                </li>
+                            </ol>
+                            <p>Bạn chọn giải pháp nào?</p>
+                            <p>Bạn có thể kết hợp những giải pháp lại với nhau.
+                               <br> Hoặc bạn có thể đề xuất với chúng tôi một giải pháp mà bạn muốn.
+                            </p>
+                            <p>Tất cả đều có thể.
+                                <br>Saigon Shoot luôn đồng hành cùng bạn trong hành trình chạm tới cảm xúc của khách hàng.
                             </p>
                         </div>
                     </div>
