--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <p>Là đơn vị có nhiều năm kinh nghiệm trong lĩnh vực làm video quảng cáo, các show truyền hình, quảng bá sản phẩm trên các nền tảng mạng xã hội. Saigon Shoot đem lại cho bạn những gói dịch vụ phức hợp và riêng lẻ tuỳ theo từng nhu cầu.
                             </p>
                             <ul style="list-style-type:none;">
-                                Thế mạnh của Feeling Media
+                                Thế mạnh của Saigon Shoot
                                 <li>⁃	Cơ sở vật chất đầy đủ (trang thiết bị, studio, phòng hậu kỳ)</li>
                                 <li>⁃	Đội ngũ nhân sự chủ chốt dày dặn kinh nghiệp thực tế (Account, Đạo diễn, Biên tập, Dựng phim)</li>
                                 <li>⁃	Đội ngũ nhân sự trẻ sáng tạo, nhiết huyết, bắt trend</li>
