--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 Thế mạnh của Saigon Shoot
                                 <li>⁃	Cơ sở vật chất đầy đủ (trang thiết bị, studio, phòng hậu kỳ)</li>
                                 <li>⁃	Đội ngũ nhân sự chủ chốt dày dặn kinh nghiệp thực tế (Account, Đạo diễn, Biên tập, Dựng phim)</li>
-                                <li>⁃	Đội ngũ nhân sự trẻ sáng tạo, nhiết huyết, bắt trend</li>
+                                <li>⁃	Đội ngũ nhân sự trẻ sáng tạo, nhiệt huyết, bắt trend</li>
                                 <li>⁃	Có thể kết nối một lượng Kols lớn trên toàn quốc.</li>
                             </ul>
                             <p>Saigon Shoot cung cấp gì?</p>
