--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Saigon Shoot</title>
+    <title>Feeling Media</title>
     <link rel="stylesheet" href="./css/components/1-header.css">
     <link rel="stylesheet" href="./css/components/2-current-information.css">
     <link rel="stylesheet" href="./css/components/3-introduction.css">
@@ -37,13 +37,12 @@
                 </div>
                 <div class="header-left-title">
                     <div class="header-left-title-company-name">
-                        Saigon Shoot
+                        MEDIA PRODUCTION - VIDEO SERVICE
                     </div>
                     <div class="header-left-title-slogan">
-                        TRÁCH NHIỆM trong cách làm việc, NGHỆ SĨ trong cách biểu đạt
+                        COMMUNICATION FROM FEELING
                     </div>
                 </div>
-
             </div>
 
             <div class="header-right">
@@ -97,53 +96,7 @@
                     <div class="general-introduction ">
                         <p class="headings-black">GIỚI THIỆU</p>
                         <div class="intro-text">
-                            <p>Là đơn vị có nhiều năm kinh nghiệm trong lĩnh vực làm video quảng cáo, các show truyền hình, quảng bá sản phẩm trên các nền tảng mạng xã hội. Saigon Shoot đem lại cho bạn những gói dịch vụ phức hợp và riêng lẻ tuỳ theo từng nhu cầu.
-                            </p>
-                            <ul style="list-style-type:none;">
-                                Thế mạnh của Saigon Shoot
-                                <li>⁃	Cơ sở vật chất đầy đủ (trang thiết bị, studio, phòng hậu kỳ)</li>
-                                <li>⁃	Đội ngũ nhân sự chủ chốt dày dặn kinh nghiệp thực tế (Account, Đạo diễn, Biên tập, Dựng phim)</li>
-                                <li>⁃	Đội ngũ nhân sự trẻ sáng tạo, nhiệt huyết, bắt trend</li>
-                                <li>⁃	Có thể kết nối một lượng Kols lớn trên toàn quốc.</li>
-                            </ul>
-                            <p>Saigon Shoot cung cấp gì?</p>
-                            <ol>
-                                <li> <strong>Giải pháp quảng cáo bằng video</strong> 
-                                    <ul style="list-style-type: none;">
-                                        <li>⁃	Sản xuất TVC, Phim Giới Thiệu Doanh Nghiệp</li>
-                                        <li>⁃	Thực hiện Live Stream trên nhiều nền tảng (web, facebook, youtube,...)</li>
-                                        <li>⁃	Thực hiện các video mang tính viral cao (tiktok, tiểu phẩm ngắn,...)</li>
-                                        <li>⁃	Xây dựng và thực hiện nội dung kênh youtube đa dạng thể loại (Craft & DIY, Ẩm Thực, Beauty, Food, giới thiệu sản phẩm...)</li>
-                                        <li>⁃	Thực hiện Video Motion Graphic, 2D, 3D, kỹ xảo Vfx.</li>
-                                    </ul>
-                                </li>
-                                <br>
-                                <li> <strong>Giải pháp quảng cáo bằng hình ảnh</strong> 
-                                    <ul style="list-style-type: none;">
-                                        <li>⁃	Chụp ảnh sản phẩm theo concept, chụp trên nền đơn sắc</li>
-                                        <li>⁃	Chụp ảnh Food, Menu nhà hàng/Quán ăn</li>
-                                        <li>⁃	Chụp ảnh mỹ phẩm, quần áo</li>
-                                        <li>⁃	Chụp ảnh người mẫu, lookbook</li>
-                                        <li>⁃	Chụp ảnh sự kiện</li>
-                                    </ul>
-                                </li>
-                                <br>
-                                <li> <strong>Giải pháp quảng cáo bằng con người kết hợp với social media</strong> 
-                                    <ul style="list-style-type: none;">
-                                        <li>⁃	Mời những Kols (Nghệ sĩ, Streamer, Youtuber,...) tham gia giới thiệu sản phẩm, dịch vụ cho doanh nghiệp trên các nền tảng mạng xã hội.
-                                        </li>
-                                        <li>⁃	Đề xuất và kết nối Người nổi tiếng làm đại sứ thương hiệu cho nhãn hàng.</li>
-                                        <li>⁃	Tổ chức event, sự kiện, nhạc hội nhằm quảng bá doanh nghiệp.</li>
-                                    </ul>
-                                </li>
-                            </ol>
-                            <p>Bạn chọn giải pháp nào?</p>
-                            <p>Bạn có thể kết hợp những giải pháp lại với nhau.
-                               <br> Hoặc bạn có thể đề xuất với chúng tôi một giải pháp mà bạn muốn.
-                            </p>
-                            <p>Tất cả đều có thể.
-                                <br>Saigon Shoot luôn đồng hành cùng bạn trong hành trình chạm tới cảm xúc của khách hàng.
-                            </p>
+                           <!-- intro fills here -->
                         </div>
                     </div>
                 </div>
@@ -223,16 +176,14 @@
             <div class="seperator"></div>
             <div class="contact-details">
                 <div class="contact-company-name mb-4">
-                    <strong> Công ty TNHH Saigon Shoot </strong><br>
-                    Tầng M, 117 - 119 Lý Chính Thắng, phường 7, quận 3, TP.HCM <br>
-                    Phòng hậu kỳ: The Camera Studio, 36 Đường số 11, Khu phố 6, phường Hiệp Bình Chánh, quận Thủ Đức (Khu dân cư Sông Đà)
+                    <!-- contact will be shown here -->
                 </div>
 
                 <div class="contact-address mb-5">
                     <p>
 
                         <i class="fa fa-mobile"></i> 0912 187 108 <br>
-                        <i class="fa fa-facebook"></i> <a href="https://www.facebook.com/SaigonShoot/">Saigon Shoot</a>
+                        <i class="fa fa-facebook"></i> <a href="https://www.facebook.com/feelingmediavn/">Feeling Media</a>
                         <br>
                     </p>
                 </div>
@@ -283,6 +234,10 @@
 <script src="js/Associate.js"></script>
 <script src="js/MainController.js"></script>
 <script src="js/Fanpage.js"></script>
+<script src="js/Menu.js"></script>
+<script src="js/Heading.js"></script>
+<script src="js/Intro.js"></script>
+<script src="js/Footer.js"></script>
 <script src="js/main.js"></script>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous"
@@ -290,3 +245,4 @@
 </body>
 
 </html>
+
