flag's bug, can't use in desktop site. Fixed

--- a/index.html
+++ b/index.html
@@ -43,21 +43,8 @@
                         COMMUNICATION FROM FEELING
                     </div>
                 </div>
-                <div>
-                    <li id="lang" class="mobile-flag" style="list-style-type: none;">
-                        <div class="flags" style="display: block; position: relative;">
-                            <a id="main-flag" class="flag" style="position: relative;">
-                                <img src="https://adl-foundation.adidas.com/prod/v18.4.1/assets/flags/vn.svg"/>
-                            </a>
-                            <div id="sub-flag" class="second-flag" currentFlag="us">
-                                <a class="section-link flag" style="position: relative;">
-                                    <img src="https://adl-foundation.adidas.com/prod/v18.4.1/assets/flags/us.svg"/>
-                    
-                                </a>
-                            </div>
-                        </div>
-                        <i id="show-flag" class="fa fa-angle-down"></i>
-                    </li>
+                <div class="flag-mobilesite">
+                   <!-- mobile flag will fill here -->
                 </div>
             </div>
 
