--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <meta property="og:image" content="http://saigonshoot.com/img/logo-mini.png">
+    <meta property="og:image" content="http://feelingmedia.com.vn/img/logo-mini.png">
 </head>
 
 <body>
